# structalg_list_sorts

./: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/include/: Benchmark.hpp
fill/: CMakeLists.txt
fill/include/: Filler.hpp
main/: CMakeLists.txt
main/src/: main.cpp
sorts/: CMakeLists.txt
sorts/include/: linear.hpp  quick.hpp  shell.hpp
timer/include/: Timer.hpp
ui/: CMakeLists.txt
ui/include/: BenchmarkWorker.hpp  MainForm.hpp
ui/src/: BenchmarkWorker.cpp  MainForm.cpp
ui/ui/: MainForm.ui
ui_main/: CMakeLists.txt
ui_main/src/: ui_main.cpp
